profile page for users updated

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -70,9 +70,7 @@
       <%= yield %>
     <main>
 
-<footer class="panel-footer">
-      this site was created by jasel chauhan
-</footer>
+<!-- <footer class="panel-footer">this site was created by jasel chauhan</footer> -->
 
   </body>
 </html>
