--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -6,17 +6,22 @@
 
     <div class="col-md-6">
 
+    <h3 id="aboutuser">about</h3>
       <% if @user.image %>
       <img class="media-object" src="<%= @user.image %>" alt="<%= @user.username %>'s image">
       <% else %>
       <img class="media-object" src="/images/default.png" alt="<%= @user.username %>'s image">
       <% end %>
       <br>
+
+      <div id="user-info">
       <p>full name: <%= @user.first_name %> <%= @user.last_name %></p>
 
       <p>email: <%= @user.email %></p>
 
       <p><a href="mailto:<%=@user.email%>?Subject=i wanna paint your wall!" id="email_form">&lt; Contact Me! &gt;</a></p>
+
+      </div>
     </div>
 
     <div class="col-md-6">
@@ -25,36 +30,28 @@
       <p><%= @user.bio %></p>
     </div>
 
-
   </div>
 
 
-
+<br><br>
   <div class="row">
-
     <div class="col-md-12">
+
+      <h3 id="view-walls">view my walls</h3>   
 
       <% if current_user.user_type == "wall_owner" %>
       <p><a href="/walls/new">Add a new wall</a></p>
       <% end %>
 
       <% @user.owned_walls.each do |wall| %>
-      <%= wall.title %>
       <a href="/walls/<%=wall.id%>"><img src="<%= wall.image %>" width=300px></a>
       <% end %>
 
-      <p>see my walls</p>    
       <% @user.painted_walls.each do |wall| %>
-      <%= wall.title %>
       <a href="/walls/<%=wall.id%>"><img src="<%= wall.image %>" width=300px></a>
       <% end %>
 
-      <form method="post" action="/users/<%= @user.id %>/delete">
-        <button>delete</button>
-      </form>
 
     </div>
-
-
 
   </div>
