--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -46,6 +46,10 @@ body {
   
 }
 
+.page-header{
+  text-align:center;
+}
+
 
 #main-title-header{
   text-shadow: 1px 1px #222222;
@@ -56,5 +60,26 @@ body {
   bottom: 0px;
   width: 100%;
 }
+
+.media-object{
+  margin-top: 30px;
+  margin-left: 50px;
+}
+
+#user-info{
+  margin-left: 50px;
+}
+
+#aboutuser{
+  margin-left: 50px;
+}
+
+#view-walls{
+ text-align: center; 
+}
+
+// .view-walls{
+//   font-size: 200px;
+// }
 
 // class="navbar navbar-default">
