user profle page styling updated

--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -71,11 +71,19 @@ body {
 }
 
 #aboutuser{
-  margin-left: 50px;
+  margin-left: 140px;
 }
 
 #view-walls{
  text-align: center; 
+}
+
+#userbio{
+  text-align: center;
+}
+
+#contactbtn{
+  margin-left: 120px;
 }
 
 // .view-walls{
