--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -14,19 +14,20 @@
       <% end %>
       <br>
 
-      <div id="user-info">
-      <p>full name: <%= @user.first_name %> <%= @user.last_name %></p>
+      <dl class="dl-horizontal">
+        <dt>full name:</dt>
+        <dd><%= @user.first_name %> <%= @user.last_name %></dd><br>
+        <dt>email address:</dt>
+        <dd><%= @user.email %></dd>
+      </dl>
 
-      <p>email: <%= @user.email %></p>
+      <p id="contactbtn"><strong><a href="mailto:<%=@user.email%>?Subject=i wanna paint your wall!" id="email_form">&lt; Contact Me! &gt;</a></strong></p>
 
-      <p><a href="mailto:<%=@user.email%>?Subject=i wanna paint your wall!" id="email_form">&lt; Contact Me! &gt;</a></p>
-
-      </div>
     </div>
 
     <div class="col-md-6">
 
-      <h3>biography</h3>  
+      <h3 id="userbio">biography</h3>  
       <p><%= @user.bio %></p>
     </div>
 
