walls index page updated styling

--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -86,6 +86,15 @@ body {
   margin-left: 120px;
 }
 
+
+#search-form{
+  margin-left: 30%;
+}
+
+#wallsindextitle{
+  margin-left: 38%;
+}
+
 // .view-walls{
 //   font-size: 200px;
 // }
