--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,4 +28,8 @@ body { background-color: #FCFCFC; }
 
 #contactbtn { margin-left: 120px; }
 
+#search-form { margin-left: 30%; }
+
+#wallsindextitle { margin-left: 38%; }
+
 /*# sourceMappingURL=style.css.map */
