--- a/app/views/walls/index.erb
+++ b/app/views/walls/index.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 
-<h1>spare walls</h1>
+<h1 id="wallsindextitle">spare walls</h1>
 
 <form id="search-form" class="form-inline" action="/walls">
   <input type="text" name="search" placeholder="Search" value="<%= params[:search] %>" class="form-control">
