--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -23,6 +23,10 @@
 
       <p id="contactbtn"><strong><a href="mailto:<%=@user.email%>?Subject=i wanna paint your wall!" id="email_form">&lt; Contact Me! &gt;</a></strong></p>
 
+      <% if current_user.user_type == "wall_owner" %>
+      <strong><p id="add_a_wall"><a href="/walls/new">Add a new wall</a></p></strong>
+      <% end %>
+
     </div>
 
     <div class="col-md-6">
@@ -39,10 +43,6 @@
     <div class="col-md-12">
 
       <h3 id="view-walls">view my walls</h3>   
-
-      <% if current_user.user_type == "wall_owner" %>
-      <p><a href="/walls/new">Add a new wall</a></p>
-      <% end %>
 
       <% @user.owned_walls.each do |wall| %>
       <a href="/walls/<%=wall.id%>"><img src="<%= wall.image %>" width=300px></a>
