--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,4 +32,6 @@ body { background-color: #FCFCFC; }
 
 #wallsindextitle { margin-left: 38%; }
 
+#add_a_wall { margin-left: 120px; }
+
 /*# sourceMappingURL=style.css.map */
