--- a/app/views/walls/index.erb
+++ b/app/views/walls/index.erb
@@ -15,12 +15,12 @@
 
     <div class="col-xs-12 col-md-4">
         <ul class="media-list">
-          <li class="media-left">
+          <li>
             <div>
               <a href="/walls/<%= wall.id %>">
               </a>
             </div>
-            <div class="media-body">
+            <div>
               <a href="/walls/<%= wall.id %>">
                 <img src="<%= wall.image %>" width="100%">
               </a>
