--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -3,6 +3,16 @@ body {
 
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+h4 {
+  text-align: center;
+}
+
 // #map {
 //   height: 300px;
 //   width: 600px;
@@ -26,6 +36,18 @@ body {
 
 .media-list{
   position: relative;
+}
+
+.media-list li div p {
+  // position: absolute;
+  // left: 10px;
+  // bottom: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  color: #fff;
+  font-size: 25px;
 }
 
 
@@ -103,4 +125,8 @@ body {
 //   font-size: 200px;
 // }
 
-// class="navbar navbar-default">
+
+
+.wall_card {
+  margin: 5px;
+}
