--- a/app/views/walls/show.erb
+++ b/app/views/walls/show.erb
@@ -1,29 +1,49 @@
 <div class="container-fluid">
 
-  <h2><%= @wall.title %>
-
-  <% if !!(@wall.owner_id.present? && @wall.artist_id.present?) %>
-
+<h2 class="page-header"><%= @wall.title %>  <% if !!(@wall.owner_id.present? && @wall.artist_id.present?) %>
     (painted)
-
   <% end %>
-
-
   </h2>
-  <% if @wall.image %>
-  <img class="media-object" src="<%= @wall.image %>" alt="<%= @wall.title %>'s image">
-  <% else %>
-  <img class="media-object" src="/images/default.png" alt="<%= @wall.title %>'s image">
-  <% end %>
+
+
+  <div class="row">
+    <div class="col-md-6">
+
+    <h3 id="aboutuser">about wall</h3>
+
+    <% if @wall.image %>
+    <img class="media-object" src="<%= @wall.image %>" alt="<%= @wall.title %>'s image">
+    <% else %>
+    <img class="media-object" src="/images/default.png" alt="<%= @wall.title %>'s image">
+    <% end %>
+
+    </div>
+  </div>
+
+    <div class="col-md-6">
+
+      <p>location: <%= @wall.city %></p>
+
+      <p><strong><a href="/users/<%= @wall.owner_id %>">find out more about the owner</a></strong></p>
+
+
+      <% if !!(@wall.owner_id.present? && @wall.artist_id.present?) %>
+        <p>painted by artist: <%= @wall.artist_id %></p>
+      <% end %>
+
+      <p>my artist and owner! (link profile pics to both here): <%= @wall.owner_id %></p>
+
+
+
+
+    </div>
+
+  </div>
+
+  
 
   <br><br>
-  <p>location: <%= @wall.city %></p>
-
-  <p><strong> wall belongs to owner of ID: <%=@wall.owner_id %> <a href="/users/<%= @wall.owner_id %>">find out more about the owner</a></strong></p>
-
-  <p>artist is: <%= @wall.artist_id %></p>
-
-  <p>my artist and owner! (link profile pics to both here): <%= @wall.owner_id %></p>
+  
 
   <% if current_user.user_type == "wall_owner" %>
   <p><strong><a href="/walls/<%=@wall.id %>/edit">edit/update this wall</a></strong></p>
