--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -125,9 +125,18 @@ h4 {
 //   font-size: 200px;
 // }
 
-
+.test {
+  text-align: left;
+}
 
 
 .wall_card {
   margin: 5px;
 }
+
+// #testid{
+
+//   text-align: left;
+
+// }
+
