--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,6 +40,8 @@ h4 { text-align: center; }
 
 #add_a_wall { margin-left: 120px; }
 
+.test { text-align: left; }
+
 .wall_card { margin: 5px; }
 
 /*# sourceMappingURL=style.css.map */
