--- a/app/views/walls/new.erb
+++ b/app/views/walls/new.erb
@@ -33,8 +33,8 @@
     <input name="wall[image]" type="text" class="form-control" id="image" placeholder="image">
   </div>
   <div class="form-group">
-    <label for="owner_id">owner_id</label>
-    <input name="wall[owner_id]" class="form-control" id="owner_id" placeholder="owner_id" value="<%= current_user.id %>" type="hidden">
+  <label for="owner_id">owner id</label>
+    <input name="wall[owner_id]" class="form-control" id="owner_id" placeholder="owner_id" value="<%= current_user.id %>" type="text">
   </div>
 
   <div class="form-group">
