--- a/app/views/walls/show.erb
+++ b/app/views/walls/show.erb
@@ -11,7 +11,7 @@
 
 
     <% if @wall.image %>
-    <img class="media-object" src="<%= @wall.image %>" alt="<%= @wall.title %>'s image">
+    <img class="media-object" src="<%= @wall.image %>" alt="<%= @wall.title %>'s image" width="450px">
     <% else %>
     <img class="media-object" src="/images/default.png" alt="<%= @wall.title %>'s image">
     <% end %>
@@ -48,8 +48,6 @@
     </div>
 
   </div>
-
-  
 
   <br><br>
   
