--- a/app/views/static/about.erb
+++ b/app/views/static/about.erb
@@ -1,4 +1,4 @@
-<h1>about</h1>
+<h1 class="page-header">about</h1>
 
 <p>describe how the site runs. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
