--- a/app/views/walls/edit.erb
+++ b/app/views/walls/edit.erb
@@ -1,4 +1,4 @@
-<h2>edit walls</h2>
+<h2 class"page-header page-header">edit walls</h2>
 <form id="walls" method="post" action="/walls/<%= @wall.id %>">
   <input type="hidden" name="_method" value="put">
   <div class="form-group">
