--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,11 +1,10 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <%= css :application %>
   <%= js :application %>
   <script src="https://maps.googleapis.com/maps/api/js?key=<%= gmap_key %>"></script>
+  <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.js"></script>
 </head>
   <body>
     <header>
