--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,4 +1,4 @@
-<h2>Register</h2>
+<h2 class="page-header">Register</h2>
 <% @user.errors.full_messages.each do |error| %>
   <div class="alert alert-danger alert-dismissible" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
