--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -62,7 +62,7 @@ h4 {
 }
 
 .jumbotron{
-  background: rgba(230, 230, 230, .5); 
+  background: rgba(230, 230, 230, 0.5); 
   margin-top: 240px;
   text-align: center;
   
@@ -70,6 +70,7 @@ h4 {
 
 .page-header{
   text-align:center;
+  border-bottom: 2px solid black;
 }
 
 
@@ -132,6 +133,15 @@ h4 {
 
 .wall_card {
   margin: 5px;
+}
+
+.wall_card li a img{
+  width: 100%;
+  height: 164px;
+}
+
+.navbar-default {
+  background: transparent;
 }
 
 // #testid{
