--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -115,7 +115,7 @@ h4 {
 }
 
 #wallsindextitle{
-  margin-left: 38%;
+  // margin-left: 38%;
 }
 
 
@@ -143,6 +143,11 @@ h4 {
 .navbar-default {
   background: transparent;
 }
+
+.wallsidx{
+  margin: 15px;
+}
+
 
 // #testid{
 
