--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -71,6 +71,7 @@ h4 {
 .page-header{
   text-align:center;
   border-bottom: 2px solid black;
+  margin-top: 0px;
 }
 
 
@@ -111,7 +112,7 @@ h4 {
 
 
 #search-form{
-  margin-left: 30%;
+  margin-left: 33%;
 }
 
 #wallsindextitle{
@@ -148,6 +149,13 @@ h4 {
   margin: 15px;
 }
 
+#view_btns{
+  margin-left: 40%;
+}
+
+#maptitle{
+  margin-top: 20px;
+}
 
 // #testid{
 
