--- a/app/views/static/about.erb
+++ b/app/views/static/about.erb
@@ -6,3 +6,7 @@ quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+<p>Gochujang mlkshk blog wolf, tousled readymade plaid put a bird on it. Pinterest scenester bicycle rights, meditation mlkshk next level fashion axe dreamcatcher chillwave. Lumbersexual twee tofu kombucha. Godard disrupt listicle, salvia roof party health goth flexitarian jean shorts lomo hella aesthetic intelligentsia. XOXO scenester fanny pack, viral asymmetrical banjo tousled green juice photo booth umami marfa stumptown echo park. Pop-up lumbersexual art party cronut +1 lo-fi disrupt salvia affogato fingerstache artisan, pitchfork celiac direct trade. Meh gochujang deep v blue bottle.</p>
+
+<p>Chillwave ugh four dollar toast, messenger bag meh gentrify deep v cold-pressed kombucha. Church-key letterpress meggings blog authentic. Locavore fingerstache brunch 90's, seitan PBR&B banjo VHS bicycle rights fanny pack lomo cornhole. Blue bottle godard pinterest intelligentsia, hammock vice dreamcatcher. Hoodie scenester bitters food truck microdosing forage. Distillery fingerstache cliche, migas ugh blue bottle pitchfork plaid lumbersexual yr. Squid quinoa keytar VHS.</p>
