--- a/app/views/static/home.erb
+++ b/app/views/static/home.erb
@@ -4,5 +4,6 @@
     <p>connects people with spare walls with those who like to paint walls</p>
     <p><a class="btn btn-primary btn-lg" href="/about" role="button">learn more</a>
     <a class="btn btn-primary btn-lg" href="/register" role="button">sign up</a></p>
+    <a class="btn btn-primary btn-lg" href="/login" role="button">login</a></p>
   </div>
 </body>
