--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -62,7 +62,7 @@ h4 {
 }
 
 .jumbotron{
-  background: rgba(230, 230, 230, 0.5); 
+  background: rgba(230, 230, 230, 0.8); 
   margin-top: 240px;
   text-align: center;
   
@@ -143,6 +143,11 @@ h4 {
 
 .navbar-default {
   background: transparent;
+  border-bottom: 2px solid black;
+}
+
+.navbar-brand{
+  color:red;
 }
 
 .wallsidx{
@@ -155,6 +160,41 @@ h4 {
 
 #maptitle{
   margin-top: 20px;
+}
+
+footer {
+  background-color: rgba(0,0,0,.5);
+  margin-top: 250px;
+  font-size: 1.5em;
+  text-align: center;
+  padding-top: 50px;
+  color: #ccc;
+  height: 100px;
+  position: relative;  
+  bottom:0px;
+}
+
+img {
+  box-shadow: 10px 10px 5px #888888;
+  border-radius: 5px;
+}
+
+img:hover {
+  opacity: 0.4;
+}
+
+.info-window{
+ 
+  height:200px;
+  width: 250px;
+}
+
+#completedpic{
+  margin: 15px;
+}
+
+#request{
+  margin-left: 140px;
 }
 
 // #testid{
