--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -26,7 +26,7 @@
           <a href="/users/<%= user.id %>">
 
             <% if user.image %>
-            <img class="media-object img-rounded" src="<%= user.image %>" alt="<%= user.username %>'s image">
+            <img class="media-object img-rounded" src="<%= user.image %>" alt="<%= user.username %>'s image" width="300px" height:"300px">
             <% else %>
             <img class="media-object" src="/images/default.png" alt="<%= user.username %>'s image">
             <% end %>
@@ -66,7 +66,7 @@
             <a href="/users/<%= user.id %>">
 
               <% if user.image %>
-              <img class="media-object img-rounded" src="<%= user.image %>" alt="<%= user.username %>'s image">
+              <img class="media-object img-rounded" src="<%= user.image %>" alt="<%= user.username %>'s image" width="300px" height:"300px">
               <% else %>
               <img class="media-object" src="/images/default.png" alt="<%= user.username %>'s image">
               <% end %>
