--- a/app/views/walls/index.erb
+++ b/app/views/walls/index.erb
@@ -33,7 +33,7 @@
             </div>
             <div>
               <a href="/walls/<%= wall.id %>">
-                <img class="wallsidx" src="<%= wall.image %>" width="100%">
+                <img class="wallsidx" src="<%= wall.image %>" width="350px" height="350px">
               </a>
               <p><%= wall.city %><p>
               </div>
