prior to reseed

--- a/app/views/walls/index.erb
+++ b/app/views/walls/index.erb
@@ -35,7 +35,7 @@
               <a href="/walls/<%= wall.id %>">
                 <img class="wallsidx" src="<%= wall.image %>" width="350px" height="350px">
               </a>
-              <p><%= wall.city %><p>
+              <p id="wallscity"><%= wall.city %><p>
               </div>
             </li>
           </ul>
