--- a/app/views/walls/show.erb
+++ b/app/views/walls/show.erb
@@ -30,6 +30,9 @@
       <dd><a href="/users/<%= @wall.owner_id %>"><img src="<%= @wall.owner.image %>" height="100px" width="100px"></a> </dd>
       <br><br><br>
 
+
+      
+
       <% if !!(@wall.owner_id.present? && @wall.artist_id.present?) %>
         <dt>painted by:  </dt>
         </dd><a href="/users/<%= @wall.artist_id %>"><img src="<%=   @wall.artist.image %>" height="100px" width="100px"></a></dd>
@@ -41,7 +44,7 @@
       <% else %>
       <% if !(@wall.owner_id.present? && @wall.artist_id.present?) %>
         
-      <p id="request"><strong><a href="mailto:<%=@wall.owner.email%>?Subject=i'd like to paint your wall" id="email_form">&lt; request to paint this wall &gt;</a></strong></p>
+      <p id="request" class="btn btn-default"><strong><a href="mailto:<%=@wall.owner.email%>?Subject=i'd like to paint your wall" id="email_form">&lt; request to paint this wall &gt;</a></strong></p>
       <% end %>
       <% end %>
 
