--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,6 +9,7 @@
   <body>
     <header>
 
+    <div class="container-fluid">
       <nav class="navbar navbar-default">
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
@@ -63,6 +64,7 @@
         </div><!-- /.container-fluid -->
       </nav>
     </header>
+    </div>
     <main class="container">
 
       <%= styled_flash %>
