--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -13,6 +13,15 @@ h4 {
   text-align: center;
 }
 
+img {
+  box-shadow: 10px 10px 5px #888888;
+  border-radius: 5px;
+}
+
+img:hover {
+  opacity: 0.4;
+}
+
 // #map {
 //   height: 300px;
 //   width: 600px;
@@ -143,7 +152,7 @@ h4 {
 
 .navbar-default {
   background: transparent;
-  border-bottom: 2px solid black;
+  border-bottom: 4px solid rgba(30,30,30,.7);
 }
 
 .navbar-brand{
@@ -174,14 +183,7 @@ footer {
   bottom:0px;
 }
 
-img {
-  box-shadow: 10px 10px 5px #888888;
-  border-radius: 5px;
-}
 
-img:hover {
-  opacity: 0.4;
-}
 
 .info-window{
  
@@ -195,7 +197,47 @@ img:hover {
 
 #request{
   margin-left: 140px;
+  color: white;
 }
+
+
+
+
+.btn.outline {
+    background: none;
+    padding: 12px 22px;
+}
+
+.btn-primary.outline {
+    border: 2px solid #0099cc;
+    color: #0099cc;
+}
+.btn-primary.outline:hover, .btn-primary.outline:focus, .btn-primary.outline:active, .btn-primary.outline.active, .open > .dropdown-toggle.btn-primary {
+    color: #33a6cc;
+    border-color: #33a6cc;
+}
+.btn-primary.outline:active, .btn-primary.outline.active {
+    border-color: #007299;
+    color: #007299;
+    box-shadow: none;
+}
+
+
+.navbar .nav > li > a {
+
+
+}
+
+
+#wallscity{
+  text-shadow: 4px 4px #222222;
+  font-size: 30px;
+}
+
+
+
+
+
 
 // #testid{
 
