--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,10 @@ ul { margin: 0; padding: 0; list-style-type: none; }
 
 h4 { text-align: center; }
 
+img { box-shadow: 10px 10px 5px #888888; border-radius: 5px; }
+
+img:hover { opacity: 0.4; }
+
 .navbar { background-color: #464655; color: #00A676; }
 
 #property-map { height: 600px; margin: 20px 0; }
@@ -44,7 +48,7 @@ h4 { text-align: center; }
 
 .wall_card li a img { width: 100%; height: 164px; }
 
-.navbar-default { background: transparent; border-bottom: 2px solid black; }
+.navbar-default { background: transparent; border-bottom: 4px solid rgba(30, 30, 30, 0.7); }
 
 .navbar-brand { color: red; }
 
@@ -56,14 +60,20 @@ h4 { text-align: center; }
 
 footer { background-color: rgba(0, 0, 0, 0.5); margin-top: 250px; font-size: 1.5em; text-align: center; padding-top: 50px; color: #ccc; height: 100px; position: relative; bottom: 0px; }
 
-img { box-shadow: 10px 10px 5px #888888; border-radius: 5px; }
-
-img:hover { opacity: 0.4; }
-
 .info-window { height: 200px; width: 250px; }
 
 #completedpic { margin: 15px; }
 
-#request { margin-left: 140px; }
+#request { margin-left: 140px; color: white; }
+
+.btn.outline { background: none; padding: 12px 22px; }
+
+.btn-primary.outline { border: 2px solid #0099cc; color: #0099cc; }
+
+.btn-primary.outline:hover, .btn-primary.outline:focus, .btn-primary.outline:active, .btn-primary.outline.active, .open > .dropdown-toggle.btn-primary { color: #33a6cc; border-color: #33a6cc; }
+
+.btn-primary.outline:active, .btn-primary.outline.active { border-color: #007299; color: #007299; box-shadow: none; }
+
+#wallscity { text-shadow: 4px 4px #222222; font-size: 30px; }
 
 /*# sourceMappingURL=style.css.map */
