--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,7 +4,8 @@
   <%= css :application %>
   <%= js :application %>
   <script src="https://maps.googleapis.com/maps/api/js?key=<%= gmap_key %>"></script>
-  <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.js"></script>
+  
+  <link href='https://fonts.googleapis.com/css?family=Play:400,700' rel='stylesheet' type='text/css'>
 </head>
   <body>
     <header>
@@ -20,7 +21,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">SpareWall</a>
+            <a class="navbar-brand" href="/">SPAREWALL</a>
           </div>
 
 
