--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -238,11 +238,13 @@ footer {
 
 .navbar-default .navbar-brand{
   color:rgba(1,87,99,1);
-  font-size: 30px;
+  font-size: 36px;
   font-weight: 900;
 }
 .navbar-default .navbar-nav>li>a{
   color:rgba(1,87,99,1);
+  font-size: 16px;
+  border-left: 1px solid rgba(1,87,99,1);
 }
 
 .profilewalls{
