--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,7 +21,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">SPAREWALL</a>
+            <a class="navbar-brand" href="/">|| sparewall ||</a>
           </div>
 
 
